# multi_agent_reinforcement_learning

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  Dockerfile  README.md  eval_a2c_model.py  eval_model.py  experiments.sh  main.py  main_SAC.py  main_single_agent.py  main_test.py  mypy.ini  pyproject.toml  single_actor_experiments.sh
multi_agent_reinforcement_learning/: __init__.py  main.py
multi_agent_reinforcement_learning/algos/: a2c_gnn.py  actor_critic_gnn.py  gnn_actor.py  gnn_critic.py  gnn_parser.py  reb_flow_solver.py  sac.py  sac_gnn_parser.py  sac_reb_flow_solver.py  uniform_actor.py
multi_agent_reinforcement_learning/cplex_mod/: matching.mod  minRebDistRebOnly.mod  sac_matching.mod  sac_minRebDistRebOnly.mod
multi_agent_reinforcement_learning/data_models/: a2c_data.py  actor_critic_data.py  actor_data.py  city_enum.py  config.py  logs.py  model_data_pair.py  price_model.py
multi_agent_reinforcement_learning/envs/: amod.py  amod_env.py  sac_amod.py  sac_amod_env.py  sac_scenario.py  scenario.py
multi_agent_reinforcement_learning/evaluation/: actor_evaluation.py
multi_agent_reinforcement_learning/misc/: __init__.py  expore_data.py
multi_agent_reinforcement_learning/plots/: mapPlot.py  map_plot.py
multi_agent_reinforcement_learning/src/: __init__.py
notebooks/: data_analysis.ipynb  data_analysis_brooklyn.ipynb  dirichlet.ipynb  plots_for_thesis.ipynb  results.ipynb  sensitivity_analysis.ipynb  transformations.ipynb
run_stats/: 400_cars.json  A2C_1_actor_no_cancel_no_price.json  A2C_2_actor_no_cancel_no_price.json  FINAL_price_strategy_2.json  FINAL_price_strategy_2_prices.json  FINAL_price_strategy_3.json  JPO_DELETE_SAC_baseline.json  No-actor 1, 100.json  No-actor 1, 300.json  No-actor 1, 400.json  No-actor 1, half cars.json  No-actor 1.json  No-actor 1_prices.json  Price_strategy_1.json  SAC_1_actor_no_cancel_no_price.json  SAC_1_actor_no_cancel_no_price_prices.json  SAC_2_actor_no_cancel_no_price.json  SAC_2_actor_no_cancel_no_price_prices.json  SAC_2_actor_org_price_test.json  SAC_2_actor_org_price_test_prices.json  Test no look ahead.json  Test no look ahead_prices.json  no-actors 1, 100_prices.json  no-actors 1, 200.json  no-actors 1, 200_prices.json  no-actors 1, 300_prices.json  no-actors 1, 400_prices.json  no-actors 1, half cars.json  no-actors 1, half cars_prices.json  no-cars 187.json  no-cars 187_prices.json  no_cars 187.json  no_cars 187_prices.json  no_cars_100.json  no_cars_100_prices.json  no_cars_200.json  no_cars_200_prices.json  no_cars_300.json  no_cars_300_prices.json  no_cars_374.json  (+16 more)
(+15 files in other folders)
