[tool.poetry]
name = "multi-agent-reinforcement-learning"
version = "0.1.0"
description = ""
authors = ["Asger <jungar111>"]
readme = "README.md"
packages = [{include = "multi_agent_reinforcement_learning"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.25.2"
pandas = "^2.0.3"
matplotlib = "^3.7.2"
seaborn = "^0.12.2"
notebook = "^7.0.2"
pre-commit = "^3.3.3"
tqdm = "^4.66.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
