[tool.poetry]
name = "multi-agent-reinforcement-learning"
version = "0.1.0"
description = ""
authors = ["Asger <jungar111>"]
readme = "README.md"
packages = [{include = "multi_agent_reinforcement_learning"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.25.2"
pandas = "^2.0.3"
matplotlib = "^3.7.2"
seaborn = "^0.12.2"
notebook = "^7.0.2"
pre-commit = "^3.3.3"
tqdm = "^4.66.1"
wandb = "^0.15.8"
black = "^23.7.0"
tomli = "^2.0.1"
torch-geometric = "^2.3.1"
torch = ">=2.0.0, !=2.0.1"
pydantic = "^2.3.0"
glob2 = "^0.7"
colorlog = "^6.7.0"


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu117"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

ignore = ["E711", "D401"]


[tool.ruff.isort]
required-imports = ["import multi_agent_reinforcment_learning"]

[tool.ruff.pydocstyle]
convention = "pep257"
