[tool.poetry]
name = "multi-agent-reinforcement-learning"
version = "0.1.0"
description = ""
authors = ["Asger Sturis Tang <s184305@dtu.dk>", "Frederik Møller Sørensen <s184306@dtu.dk>", "Joachim Pors Andreasen <s184289@dtu.dk>"]
readme = "README.md"
packages = [{include = "multi_agent_reinforcement_learning"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.25.2"
pandas = "^2.0.3"
matplotlib = "^3.7.2"
seaborn = "^0.13"
notebook = "^7.0.2"
pre-commit = "^3.3.3"
tqdm = "^4.66.1"
wandb = "^0.15.8"
black = "^23.7.0"
tomli = "^2.0.1"
torch-geometric = "^2.3.1"
torch = "=2.0.0"
pydantic = "^2.3.0"
glob2 = "^0.7"
colorlog = "^6.7.0"
statsmodels = "^0.14.0"
bokeh = "^3.3.1"
holoviews = "^1.18.1"


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu117"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
select = ["E", "D", "F", "I"]

ignore = ["E711"]


[tool.ruff.pydocstyle]
convention = "pep257"
